--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
 
     - name: Build with Gradle
-      run:
-        chmod +x ./gradlew
+      run: |
+        chmod +x ./gradlew 
         ./gradlew build
 
