--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Java CICD with Gradle
 
 on:
   push:
@@ -24,3 +24,10 @@ jobs:
       run: |
         chmod +x ./gradlew 
         ./gradlew build
+
+    ## 도커 이미지 빌드 후 도커허브에 push
+    - name: docker build and push
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker build -t ${{ secrets.DOCKER_REPO }} .
+        docker push ${{ secrets.DOCKER_REPO }}
