--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 test.txt
-/src/main/resources/test2.txt
+/src/main/resources/application.yml
 
 ### NetBeans ###
 /nbproject/private/
