--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
        touch ./src/main/resources/application.yml
        echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
+       cat ./src/main/resources/application.yml
        
     - name: Build with Gradle
       run: |
