--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,10 +18,11 @@ jobs:
         distribution: 'temurin'
         cache: gradle
         
-    - uses: actions/checkout@v3
-    - run: touch ./src/main/resources/application.yml
-    - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
-    - run: cat ./src/main/resources/application.yml
+    - name: Set YML
+      run: |
+        mkdir -p src/main/resources
+        echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
+        find src
        
     - name: Build with Gradle
       run: |
