--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,11 @@ jobs:
         distribution: 'temurin'
         cache: gradle
         
-    - name: make application.properties
-      if: true 
+    - name: Set YML
       run: |
-       touch ./src/main/resources/application.yml
-       echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
+        mkdir -p src/main/resources
+        echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
+        find src
        
     - name: Build with Gradle
       run: |
