--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,9 @@ jobs:
         chmod +x ./gradlew 
         ./gradlew build
 
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: mypetlog
+        path: build/libs/*.jar
+
