--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,27 +29,37 @@ jobs:
         chmod +x ./gradlew 
         ./gradlew build
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
+    - name: Deliver File
+      uses: appleboy/scp-action@master
       with:
-        name: mypetlog
-        path: build/libs/*.jar
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        source: "build/libs/*.jar"
+        target: "source"
+        rm: true
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: mypetlog
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY  }}
-      - name: SCP transfer
-        run: scp *.jar ${{ secrets.USERNAME  }}@${{ secrets.HOST  }}:~/cicd
-      - name: Execute remote commands
-        run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} "sudo fuser -k 8080/tcp"
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} "sudo nohup java -jar -Dspring.profiles.active=dev -Djasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD  }} ~/cicd/*.jar &"
+    - name: Deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        script: |
+          SOURCE_DIR=source/build/libs
+          FILE_NAME=`find $SOURCE_DIR/*.jar -printf "%f\n"`
+          PID=`ps -ef | grep occupying | grep sudo | grep -v "bash -c" | awk '{print $2}'`
+
+          if [ -z "$PID" ]; then
+                  echo "#### THERE IS NO PROCESS ####"
+          else
+                  echo "#### KILL $PID ####"
+                  sudo kill $PID
+          fi
+
+          echo "#### RUN $SOURCE_DIR/$FILE_NAME ####"
+
+          sudo nohup java -jar -Dspring.profiles.active=dev -Djasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD  }} $SOURCE_DIR/$FILE_NAME > /dev/null 2>&1 &
+          
