--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,25 +34,31 @@ jobs:
     - name: Upload build artifact
       uses: actions/upload-artifact@v2
       with:
-        name: test
+        name: mypetlog
         path: build/libs/test-0.0.1-SNAPSHOT.jar
 
-    - name: Deploy
-      uses: appleboy/ssh-action@master
+  # 배포 **
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    # 위의 빌드작업한 JAR 파일 = 아티팩트를 다운로드
+    steps:
+    - name: Download build artifact
+      uses: actions/download-artifact@v2
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: 22
-        script: |
-          SOURCE_DIR=source/build/libs
-          FILE_NAME=`find $SOURCE_DIR/*.jar -printf "%f\n"`
-          PID=`ps -ef | grep occupying | grep sudo | grep -v "bash -c" | awk '{print $2}'`
-          if [ -z "$PID" ]; then
-                  echo "#### THERE IS NO PROCESS ####"
-          else
-                  echo "#### KILL $PID ####"
-                  sudo kill $PID
-          fi
-          echo "#### RUN $SOURCE_DIR/$FILE_NAME ####"
-          sudo nohup java -jar $SOURCE_DIR/$FILE_NAME > /dev/null 2>&1 &
+        name: test
+        path: build/libs/
+
+    # EC2에 배포
+    # EC2 SSH 키를 private_key.pem 파일로 저장 ( 위치는 GitHub 서버 )
+    # SCP를 사용하여 JAR 파일을 EC2 서버로 복사
+    # SSH를 사용하여 EC2 서버에 연결하고 현재 실행 중인 Java 프로세스를 종료한 다음 새로운 Java 프로세스 생성 및 실행!!
+    ## NLP 적용하면 IP -> 도메인으로 수정 + EC2 늘리면 run 추가
+    - name: Deploy to EC2
+      run: |
+        echo "${{ secrets.SSH_KEY }}" > private_key.pem
+        chmod 600 private_key.pem
+        scp -i private_key.pem -o StrictHostKeyChecking=no build/libs/test-0.0.1-SNAPSHOT.jar ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/${{ secrets.USERNAME }}/test.jar
+        ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pgrep java | xargs kill -9; nohup java -jar /home/${{ secrets.USERNAME }}/test.jar > app.log 2>&1 &"
+        rm -f private_key.pem
