--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Upload build artifact
       uses: actions/upload-artifact@v2
       with:
-        name: mypetlog
+        name: test
         path: build/libs/test-0.0.1-SNAPSHOT.jar
 
   # 배포 **
