--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,5 +60,6 @@ jobs:
         echo "${{ secrets.SSH_KEY }}" > private_key.pem
         chmod 600 private_key.pem
         scp -i private_key.pem -o StrictHostKeyChecking=no build/libs/test-0.0.1-SNAPSHOT.jar ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/${{ secrets.USERNAME }}/test.jar
-        ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pgrep java | xargs kill -9; nohup java -jar /home/${{ secrets.USERNAME }}/test.jar > app.log 2>&1 &"
+        ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "sudo fuser -k 8001/tcp || true"
+        ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "nohup java -jar /home/${{ secrets.USERNAME }}/test.jar > app.log 2>&1 &"
         rm -f private_key.pem
